<resources>
    <string name="app_name">Password Manager</string>
    <string name="add_password">Add password</string>
    <string name="key">Key</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
</resources>